Fix eslint rule. Add jest as eslint forces it

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es6": true,
+        "jest/globals": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -19,8 +20,10 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react"
+        "react",
+        "jest"
     ],
     "rules": {
+      "react/prefer-stateless-function": 0
     }
 }
