Fix eslint errors

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -24,6 +24,7 @@
         "jest"
     ],
     "rules": {
-      "react/prefer-stateless-function": 0
+      "react/prefer-stateless-function": 0,
+      "react/jsx-filename-extension": 0
     }
 }
