--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.4.1",
+    "ol": "^6.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
