--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "4.4.1",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
+    "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
