--- a/server/pom.xml
+++ b/server/pom.xml
@@ -116,7 +116,7 @@
         <version>3.1.1</version>
         <configuration>
           <consoleOutput>true</consoleOutput>
-          <configLocation>google_checks.xml</configLocation>
+          <configLocation>checkstyle.xml</configLocation>
         </configuration>
       </plugin>
 		</plugins>
