--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -25,6 +25,7 @@
   ],
   "rules": {
     "react/prefer-stateless-function": 0,
-    "react/jsx-filename-extension": 0
+    "react/jsx-filename-extension": 0,
+    "class-methods-use-this": "off"
   }
 }
