Set off rule arrow-body-style

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -26,6 +26,7 @@
   "rules": {
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": 0,
-    "class-methods-use-this": "off"
+    "class-methods-use-this": "off",
+    "arrow-body-style": "off"
   }
 }
