--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.4.1",
+    "lodash": "latest",
+    "node-uuid": "^1.4.8",
     "ol": "^6.2.1",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
@@ -14,7 +16,8 @@
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "uuid": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
