Add default user for testing

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.password=admin
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
+
+# Default user
+spring.security.user.name=admin
+spring.security.user.password=admin
