Set off ssl in DB connection

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
