--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -29,6 +29,7 @@
     "class-methods-use-this": "off",
     "arrow-body-style": "off",
     "object-shorthand": "off",
-    "max-len": ["error", { "code": 120 }]
+    "max-len": ["error", { "code": 120 }],
+    "react/forbid-prop-types": 0
   }
 }
