--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
     "ol": "^6.2.1",
+    "prop-types": "15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
