--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "4.4.1",
     "lodash": "4.17.15",
+    "moment": "^2.24.0",
     "node-uuid": "^1.4.8",
     "ol": "^6.2.1",
     "react": "^16.12.0",
@@ -17,7 +18,8 @@
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "uuid": "7.0.2"
+    "uuid": "7.0.2",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
