--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 
-## default connection pool
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
+
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 #drop n create table again, good for testing, comment this in production
 spring.jpa.hibernate.ddl-auto=create
+
+spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
+spring.liquibase.url=jdbc:postgresql://localhost:5432/postgres?serverTimezone=UTC
+spring.liquibase.user=postgres
+spring.liquibase.password=admin
+jwt.token.secret=jwtappdemo
+jwt.token.expired=3600000
