--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,9 +4,14 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=admin
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+
+# Default user
+spring.security.user.name=admin
+spring.security.user.password=admin
