--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "moment": "^2.24.0",
     "node-uuid": "^1.4.8",
     "ol": "^6.2.1",
-    "prop-types": "latest",
+    "prop-types": "15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-datepicker": "^2.13.0",
