--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
-    "lodash": "4.17.15",
     "moment": "^2.24.0",
-    "node-uuid": "^1.4.8",
     "ol": "^6.2.1",
     "prop-types": "15.7.2",
     "react": "^16.12.0",
@@ -19,8 +17,7 @@
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "uuid": "7.0.2"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
