--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "ol": "^6.2.1",
     "prop-types": "15.7.2",
     "react": "^16.12.0",
+    "react-avatar": "3.9.2",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
