Rename refactor User to Person

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -14,3 +15,5 @@ spring.jpa.hibernate.ddl-auto=update
 # Default user
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+
