--- a/server/pom.xml
+++ b/server/pom.xml
@@ -16,10 +16,34 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+    <jsonwebtoken.version>0.8.0</jsonwebtoken.version>
+    <spring-restdocs.version> 2.0.4.RELEASE</spring-restdocs.version>
 	</properties>
 
 	<dependencies>
-		<dependency>
+
+    <!-- JSON Web Token lib -->
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>${jsonwebtoken.version}</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/com.auth0/java-jwt -->
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.10.0</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>auth0-spring-security-api</artifactId>
+      <version>1.0.0-rc.3</version>
+    </dependency>
+
+    <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
@@ -100,10 +124,10 @@
 				</executions>
 				<dependencies>
 					<dependency>
-						<groupId>org.springframework.restdocs</groupId>
-						<artifactId>spring-restdocs-asciidoctor</artifactId>
-						<version>${spring-restdocs.version}</version>
-					</dependency>
+          <groupId>org.springframework.restdocs</groupId>
+          <artifactId>spring-restdocs-asciidoctor</artifactId>
+          <version>${spring-restdocs.version}</version>
+        </dependency>
 				</dependencies>
 			</plugin>
 			<plugin>
