add seed, param constructor, annotation to table

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=postgres
 spring.datasource.password=admin
 
 # Strategy how server works with database
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # Default user
 spring.security.user.name=admin
