--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,6 +31,6 @@
     "object-shorthand": "off",
     "max-len": ["error", { "code": 120 }],
     "react/forbid-prop-types": 0,
-    "linebreak-style": ["error", "windows"]
+    "linebreak-style": "off"
   }
 }
