--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -30,6 +30,7 @@
     "arrow-body-style": "off",
     "object-shorthand": "off",
     "max-len": ["error", { "code": 120 }],
-    "react/forbid-prop-types": 0
+    "react/forbid-prop-types": 0,
+    "import/no-unresolved": "warn"
   }
 }
