--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -24,6 +24,7 @@
     "jest"
   ],
   "rules": {
+    "linebreak-style": "off",
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": 0,
     "class-methods-use-this": "off",
