--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,6 +31,7 @@
     "object-shorthand": "off",
     "max-len": ["error", { "code": 120 }],
     "react/forbid-prop-types": 0,
-    "import/no-unresolved": "warn"
+    "import/no-unresolved": "warn",
+    "linebreak-style": "off"
   }
 }
