--- a/client/package.json
+++ b/client/package.json
@@ -2,22 +2,26 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "0.19.2",
     "bootstrap": "4.4.1",
+    "concurrently": "^5.1.0",
     "moment": "^2.24.0",
     "ol": "^6.2.1",
     "prop-types": "15.7.2",
     "react": "^16.12.0",
-    "react-bootstrap": "1.0.0-beta.16",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-native": "^0.61.5",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "2.20.1",
@@ -61,6 +66,8 @@
     "eslint-plugin-react-hooks": "1.7.0",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
+    "react-native-loading-spinner-overlay": "^1.1.0",
+    "react-redux": "^7.2.0",
     "react-test-renderer": "16.13.0"
   }
 }
