--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -33,6 +33,8 @@
     "max-len": ["error", { "code": 120 }],
     "react/forbid-prop-types": 0,
     "import/no-unresolved": "warn",
-    "linebreak-style": "off"
+    "linebreak-style": "off",
+    "import/no-named-as-default" :"off",
+    "import/no-named-as-default-member" : "off"
   }
 }
