--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
