--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-avatar": "3.9.2",
     "react-bootstrap": "1.0.0-beta.16",
+    "react-bootstrap-pagination-logic": "^1.0.0",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
