that was move secret key to aplication.properties

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,5 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 # Default user
 spring.security.user.name=admin
 spring.security.user.password=admin
+# SECRET_KEY
+SECRET_KEY=lunch_time
 
 
