--- a/server/pom.xml
+++ b/server/pom.xml
@@ -98,6 +98,12 @@
       <version>1.0.0.RELEASE</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
 
 	</dependencies>
 
