Update links on navigation bar

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -35,6 +35,7 @@
     "import/no-unresolved": "warn",
     "linebreak-style": "off",
     "import/no-named-as-default" :"off",
-    "import/no-named-as-default-member" : "off"
+    "import/no-named-as-default-member" : "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
