--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "admin"
+      POSTGRES_USER: "lunchTimeAppUser"
+      POSTGRES_PASSWORD: "kfyxnfqVRv54"
 
   server:
     build:
@@ -19,7 +19,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/lunchtime?useUnicode=true&characterEncoding=utf8&useSSL=false
     volumes:
       - ./server/:/app/
     working_dir: /app
