--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/lunchtime?useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.username=lunchTimeAppUser
+spring.datasource.password=kfyxnfqVRv54
 
 # Strategy how server works with database
 spring.jpa.hibernate.ddl-auto=update
