--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - "5432:5432"
     environment:
+      POSTGRES_DB: "lunchtime"
       POSTGRES_USER: "lunchTimeAppUser"
       POSTGRES_PASSWORD: "kfyxnfqVRv54"
 
