--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,8 +7,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "admin"
+      POSTGRES_DB: "lunchtime"
+      POSTGRES_USER: "lunchTimeAppUser"
+      POSTGRES_PASSWORD: "kfyxnfqVRv54"
 
   server:
     build:
@@ -20,7 +21,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/postgres?useUnicode=true&characterEncoding=utf8&useSSL=false
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/lunchtime?useUnicode=true&characterEncoding=utf8&useSSL=false
     working_dir: /app
     command: java -jar target/LunchTime-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod
 
