Move all properties to one file

--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -14,5 +14,8 @@ spring.datasource.password=kfyxnfqVRv54
 # Strategy how server works with database
 spring.jpa.hibernate.ddl-auto=update
 
+spring.resources.chain.enabled=true
+management.security.enabled=true
+
 # SECRET_KEY
 SECRET_KEY=lunch_time
