--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "validator": "^13.0.0",
-    "react-password-strength-bar": "latest"
+    "react-password-strength-bar": "0.3.2"
   },
   "scripts": {
     "start:server": "node server.js",
