--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
     "react-router-dom": "^5.1.2",
+    "react-router": "5.1.2",
     "react-scripts": "3.4.0",
     "validator": "^13.0.0",
     "react-password-strength-bar": "0.3.2"
