add migration to db. Add script for baseline scheme

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -101,7 +101,10 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-core</artifactId>
+    </dependency>
   </dependencies>
 
 	<build>
