--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -11,8 +11,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/lunchtime?useUnicode=true
 spring.datasource.username=lunchTimeAppUser
 spring.datasource.password=kfyxnfqVRv54
 
+# Flyway
+spring.flyway.schemas=public
+spring.flyway.locations=classpath:/db/migration
+spring.flyway.baseline-on-migrate=true
+
 # Strategy how server works with database
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
 
 spring.resources.chain.enabled=true
 management.security.enabled=true
