--- a/server/src/main/resources/config/application-dev.properties
+++ b/server/src/main/resources/config/application-dev.properties
@@ -1,2 +1,5 @@
 # CORS urls
 cors.urls=http://localhost:3000
+
+# Resources
+resourceFolders=./static/images/dishes,./static/images/events,./static/images/profile
