--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,6 +22,8 @@ services:
       - "8080:8080"
     environment:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/lunchtime?useUnicode=true&characterEncoding=utf8&useSSL=false
+    volumes:
+      - ./server/static/:/app/static/
     working_dir: /app
     command: java -jar target/LunchTime-0.0.1-SNAPSHOT.jar --spring.profiles.active=prod
 
