Add maven dependency for Json object storing

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -105,6 +105,11 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.vladmihalcea</groupId>
+      <artifactId>hibernate-types-52</artifactId>
+      <version>2.9.9</version>
+    </dependency>
   </dependencies>
 
   <build>
