--- a/server/pom.xml
+++ b/server/pom.xml
@@ -105,6 +105,10 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-cache</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
