--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -21,6 +21,13 @@ spring.flyway.baseline-on-migrate=true
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
+# MailSender properties
+spring.mail.host=temp.host
+spring.mail.username=temp@temp.com
+spring.mail.password=12345678
+spring.mail.port=111
+spring.mail.protocol=smtps
+mail.debug=true
 
 spring.resources.chain.enabled=true
 management.security.enabled=true
