--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -22,10 +22,10 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 # MailSender properties
-spring.mail.host=temp.host
-spring.mail.username=temp@temp.com
-spring.mail.password=12345678
-spring.mail.port=111
+spring.mail.host=smtp.gmail.com
+spring.mail.username=noreply.lunchtime@gmail.com
+spring.mail.password=dyoeskhgcvnyvyxz
+spring.mail.port=587
 spring.mail.protocol=smtps
 mail.debug=true
 
