Change application properties

--- a/server/src/main/resources/config/application.properties
+++ b/server/src/main/resources/config/application.properties
@@ -23,10 +23,10 @@ spring.jpa.show-sql=true
 
 # MailSender properties
 spring.mail.host=smtp.gmail.com
-spring.mail.username=noreply.lunchtime@gmail.com
-spring.mail.password=dyoeskhgcvnyvyxz
+spring.mail.userName=noreply.lunchtime@gmail.com
+spring.mail.password=lunchlunchbutnotoverlunch
 spring.mail.port=587
-spring.mail.protocol=smtps
+spring.mail.protocol=smtp
 mail.debug=true
 
 spring.resources.chain.enabled=true
