add image repository for rest and all functionality to send images

--- a/server/src/main/resources/config/application-dev.properties
+++ b/server/src/main/resources/config/application-dev.properties
@@ -2,4 +2,4 @@
 cors.urls=http://localhost:3000
 
 # Resources
-resourceFolders=./static/images/dishes,./static/images/events,./static/images/profile
+resourceFolders=./static/images/dishes,./static/images/events,./static/images/profile,./static/images/restaurants
