--- a/server/src/main/resources/config/application-prod.properties
+++ b/server/src/main/resources/config/application-prod.properties
@@ -4,4 +4,4 @@ cors.urls=http://35.234.68.126
 timezone=Europe/Kiev
 
 # Resources
-resourceFolders=./static/images/dishes,./static/images/events,./static/images/profile
+resourceFolders=./static/images/dishes,./static/images/events,./static/images/profile,./static/images/restaurants
