Disable redundant eslint rule

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -37,6 +37,7 @@
     "import/no-unresolved": "warn",
     "import/no-named-as-default" :"off",
     "import/no-named-as-default-member" : "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "no-restricted-syntax": "off"
   }
 }
