--- a/server/pom.xml
+++ b/server/pom.xml
@@ -112,6 +112,12 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.10.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20190722</version>
+    </dependency>
+
   </dependencies>
 
   <build>
