--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,13 @@
     "react-bootstrap-pagination-logic": "^1.0.0",
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
+    "react-image-file-resizer": "^0.2.3",
     "react-openlayers": "^0.3.0",
-    "react-router-dom": "^5.1.2",
+    "react-password-strength-bar": "0.3.2",
     "react-router": "5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "validator": "^13.0.0",
-    "react-password-strength-bar": "0.3.2"
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start:server": "node server.js",
