--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,19 +1,19 @@
-name: CD
+# name: CD
 
-on:
-  push:
-    branches: [ dev ]
+# on:
+#   push:
+#     branches: [ dev ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: webfactory/ssh-agent@v0.2.0
-        with:
-          ssh-private-key: ${{ secrets.STAGING_PRIVATE_KEY }}
+#     steps:
+#       - uses: webfactory/ssh-agent@v0.2.0
+#         with:
+#           ssh-private-key: ${{ secrets.STAGING_PRIVATE_KEY }}
 
-      - name: Run deploy script
-        run: |
-          ssh-keyscan ${{ secrets.STAGING_SERVER }} >> ~/.ssh/known_hosts
-          ssh -f ${{ secrets.STAGING_USER }}@${{ secrets.STAGING_SERVER }} 'cd ~/Lunch_Time && git pull origin && ./bin/deploy.sh'
+#       - name: Run deploy script
+#         run: |
+#           ssh-keyscan ${{ secrets.STAGING_SERVER }} >> ~/.ssh/known_hosts
+#           ssh -f ${{ secrets.STAGING_USER }}@${{ secrets.STAGING_SERVER }} 'cd ~/Lunch_Time && git pull origin && ./bin/deploy.sh'
