--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -11,7 +11,8 @@
   ],
   "globals": {
     "Atomics": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "google": true
   },
   "parserOptions": {
     "ecmaFeatures": {
