--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "bootstrap": "4.4.1",
     "express": "4.17.1",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.24.0",
     "ol": "^6.2.1",
     "openlayers": "4.6.5",
@@ -23,11 +24,11 @@
     "react-datepicker": "^2.13.0",
     "react-dom": "^16.12.0",
     "react-openlayers": "^0.3.0",
-    "react-router-dom": "^5.1.2",
+    "react-password-strength-bar": "0.3.2",
     "react-router": "5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "validator": "^13.0.0",
-    "react-password-strength-bar": "0.3.2"
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start:server": "node server.js",
